# pinakes

./: .dockerignore  .gitignore  .gitleaks.toml  .pylintrc  Dockerfile  INSTALL.md  README.md  bindep.txt  codecov.yml  conftest.py  dev-requirements.txt  docker-compose.yml  index.md  lint-requirements.txt  manage.py  post_translation.sh  pre_translation.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: python-package.yml
_layouts/: default.html
ansible-catalog/: asgi.py  catalog.db  router.py  urls.py  wsgi.py
ansible-catalog/settings/: defaults.py
ansible_catalog/: asgi.py  celery.py  urls.py  wsgi.py
ansible_catalog/common/: image_mixin.py  queryset_mixin.py  serializers.py  tag_mixin.py  tasks.py  utils.py
ansible_catalog/main/: apps.py  models.py
ansible_catalog/settings/: defaults.py  development.py  production.py
ansible_catalog/ui/: .gitignore
approval/: apps.py  basemodel.py  models.py  serializers.py  urls.py  views.py
approval/migrations/: 0001_initial.py  0002_auto_20210629_2229.py  (+1 more)
automation_services_catalog/: asgi.py  urls.py  wsgi.py
catalog/: basemodel.py  models.py  serializers.py  urls.py  views.py
common/: image_mixin.py  queryset_mixin.py  serializers.py  tag_mixin.py
docker/: server.sh  worker.sh
docs/: ARCHITECTURE.md  AUTHENTICATION.md  CONTRIBUTING.md  CREDENTIALS.md  DEV_INSTALL.md  DOCKER_COMPOSE.md  LOCAL_DEV.md  MINIKUBE.md  RBAC.md  SECURITY.md  VAGRANT.md  drf_testing.md  oauth_code_flow.seq
inventory/: basemodel.py  models.py  serializers.py  tasks.py  urls.py  views.py
keycloak_setup/: dev.yml  prod_worker.yml
main/: apps.py  models.py
minikube_files/: app-deployment.yaml  postgres-deployment.yaml  worker-deployment.yaml
pinakes/: about.yml  asgi.py  urls.py  wsgi.py
(+944 files in other folders)
