[metadata]
name = pinakes
author = Ansible, Inc.
author-email = info@ansible.com
summary = "Automation Services Catalog adds governance to Job Templates and Workflows"
home-page = https://github.com/ansible/pinakes
description-file = README.md
license_file = LICENSE.md

[files]
packages =
    pinakes

[pbr]
warnerrors = True
