[metadata]
name = pinakes
author = Ansible, Inc.
author-email = info@ansible.com
summary = "Automation Services Catalog adds governance to Job Templates and Workflows"
home-page = https://github.com/ansible/pinakes
description-file = README.md
license_file = LICENSE.md

[files]
packages =
    pinakes

[pbr]
warnerrors = True

[flake8]
show-source = True
# E123, E125 skipped as they are invalid PEP-8.
# Non-PEP8 compilant errors:
#  - E123: Closing bracket does not match indentation of opening bracket's line
#  - E125: Continuation line with same indent as next logical line
#  - W503: Line break before binary operator
# Temporarily disabled:
#  - E501: Line too long
ignore = E123,E125,W503
exclude = .git,.tox
