[metadata]
name = pinakes
author = Ansible, Inc.
author-email = info@ansible.com
summary = "Automation Services Catalog adds governance to Job Templates and Workflows"
home-page = https://github.com/ansible/pinakes
description-file = README.md
license_file = LICENSE.md

[files]
packages =
    pinakes

[pbr]
warnerrors = True

[flake8]
show-source = True
# Flake8 default ignore list:
# ['W504', 'B904', 'B901', 'E24', 'W503', 'B950', 'E123', 'E704', 'B903', 'E121', 'B902', 'E226', 'E126']
extend-ignore =
    E203,  # Whitespace before ':' (false positive in slices, handled by black. see: https://github.com/psf/black/issues/315)
exclude = .git,.tox
